--- a/XenkoShaderExplorer/MainWindow.xaml
+++ b/XenkoShaderExplorer/MainWindow.xaml
@@ -20,8 +20,10 @@
         <Border Grid.Row="0">
             <StackPanel Margin="8">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Name="Header" Text="Shader Explorer for Xenko" Foreground="White" Margin="0,0,0,4"
-                               FontSize="18" FontFamily="Segoe UI Light"/>
+                    <Button Content="Expand all" Click="OnExpandAllButtonClick"/>
+                    <Button Content="Collapse all" Margin="4,0,0,0" Click="OnCollapseAllButtonClick"/>
+                    <Button Content="Info" Margin="4,0,0,0" Click="OnInfoButtonClick"/>
+                    <ComboBox Name="XenkoDirMode" Margin="4,0,0,0" Width="80"/>
                     <TextBox Text="{Binding Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=1000}"
                              ToolTip="Enter the path to a Xenko installation"
                              BorderThickness="0"
@@ -29,11 +31,6 @@
                              FontSize="14" FontFamily="Segoe UI Light"
                              VerticalAlignment="Bottom"
                              Margin="12,0,0,5"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Button Content="Expand all" Click="OnExpandAllButtonClick"/>
-                    <Button Content="Collapse all" Margin="4,0,0,0" Click="OnCollapseAllButtonClick"/>
-                    <Button Content="Info" Margin="4,0,0,0" Click="OnInfoButtonClick"/>
                 </StackPanel>
             </StackPanel>
         </Border>
