--- a/Stride.ShaderExplorer/App.xaml
+++ b/Stride.ShaderExplorer/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="XenkoShaderExplorer.App"
+﻿<Application x:Class="StrideShaderExplorer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:XenkoShaderExplorer"
+             xmlns:local="clr-namespace:StrideShaderExplorer"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
 
