--- a/Stride.ShaderExplorer/MainWindow.xaml
+++ b/Stride.ShaderExplorer/MainWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="XenkoShaderExplorer.MainWindow"
+﻿<Window x:Class="StrideShaderExplorer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:XenkoShaderExplorer"
+        xmlns:local="clr-namespace:StrideShaderExplorer"
         xmlns:shb="clr-namespace:AurelienRibon.Ui.SyntaxHighlightBox;assembly=AurelienRibon.Ui.SyntaxHighlightBox"
-        Icon="Assets\XenkoShaderExplorerLogo.ico"
+        Icon="Assets\StrideShaderExplorerLogo.ico"
         mc:Ignorable="d"
-        Title="Shader Explorer for Xenko" Height="350" Width="525"
+        Title="Shader Explorer for Stride" Height="350" Width="525"
         WindowState="Maximized">
     
     <Grid Background="#FF434343">
@@ -16,16 +16,16 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <!-- Top row: title, Xenko installation path and buttons -->
+        <!-- Top row: title, Stride installation path and buttons -->
         <Border Grid.Row="0">
             <StackPanel Margin="8">
                 <StackPanel Orientation="Horizontal">
                     <Button Content="Expand all" Click="OnExpandAllButtonClick"/>
                     <Button Content="Collapse all" Margin="4,0,0,0" Click="OnCollapseAllButtonClick"/>
                     <Button Content="Info" Margin="4,0,0,0" Click="OnInfoButtonClick"/>
-                    <ComboBox Name="XenkoDirMode" Margin="4,0,0,0" Width="80"/>
+                    <ComboBox Name="StrideDirMode" Margin="4,0,0,0" Width="80"/>
                     <TextBox Text="{Binding Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=1000}"
-                             ToolTip="Enter the path to a Xenko installation"
+                             ToolTip="Enter the path to a Stride installation"
                              BorderThickness="0"
                              Foreground="#A0A0A0" Background="Transparent"
                              FontSize="14" FontFamily="Segoe UI Light"
