Changes font to Consolas and code auto formatting

--- a/SyntaxHighlightBox/AurelienRibon.Ui.SyntaxHighlightBox/src/SyntaxHighlightBox.xaml
+++ b/SyntaxHighlightBox/AurelienRibon.Ui.SyntaxHighlightBox/src/SyntaxHighlightBox.xaml
@@ -9,7 +9,7 @@
 			<Setter Property="AcceptsTab" Value="True" />
 			<Setter Property="HorizontalScrollBarVisibility" Value="Auto" />
 			<Setter Property="VerticalScrollBarVisibility" Value="Auto" />
-			<Setter Property="FontFamily" Value="Courier New" />
+			<Setter Property="FontFamily" Value="Consolas" />
 			<Setter Property="FontSize" Value="9pt" />
 		</Style>
 	</TextBox.Style>
