--- a/Stride.ShaderExplorer/MainWindow.xaml
+++ b/Stride.ShaderExplorer/MainWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Title="Shader Explorer for Stride" Height="350" Width="525"
         WindowState="Maximized">
-    
+
     <Grid Background="#FF434343">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -76,7 +76,7 @@
                           Background="#FF434343"/>
 
             <StackPanel Grid.Row="0" Grid.Column="2" Margin="0,0,0,2" Orientation="Horizontal">
-                <Button Content="Expand all" Click="OnExpandAllButtonClick"/>
+                <ComboBox Name="BaseShaders" Margin="4,0,0,0.4" Width="120"/>
                 <Button Content="Collapse all" Margin="4,0,0,0" Click="OnCollapseAllButtonClick"/>
                 <TextBlock IsManipulationEnabled="false" Padding="4,1"  Background="White" FontFamily="Consolas" FontSize="10pt" Text="{Binding SelectedWord, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
             </StackPanel>
