--- a/Stride.ShaderExplorer/MainWindow.xaml
+++ b/Stride.ShaderExplorer/MainWindow.xaml
@@ -76,9 +76,11 @@
                           Background="#FF434343"/>
 
             <StackPanel Grid.Row="0" Grid.Column="2" Margin="0,0,0,2" Orientation="Horizontal">
-                <ComboBox Name="BaseShaders" Margin="4,0,0,0.4" Width="120"/>
-                <Button Content="Collapse all" Margin="4,0,0,0" Click="OnCollapseAllButtonClick"/>
-                <TextBlock IsManipulationEnabled="false" Padding="4,1"  Background="White" FontFamily="Consolas" FontSize="10pt" Text="{Binding SelectedWord, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
+                <ComboBox Name="BaseShaders" Margin="0,0,2,0" Width="120"/>
+                <Button x:Name="BackButton" Content="&lt;" Margin="2,0" Click="OnBackButtonClick" IsEnabled="false"/>
+                <Button x:Name="ForwardButton" Content="&gt;" Margin="2,0" Click="OnForwardButtonClick" IsEnabled="false"/>
+                <Button x:Name="OpenButton" Content="Explore" Margin="2,0" Click="OnExploreButtonClick"/>
+                <TextBlock IsManipulationEnabled="false" Margin="2,0" Padding="4,0"  Background="White" FontFamily="Consolas" FontSize="10pt" Text="{Binding SelectedWord, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
             </StackPanel>
 
             <!-- Code view -->
