--- a/Stride.ShaderExplorer/MainWindow.xaml
+++ b/Stride.ShaderExplorer/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:shb="clr-namespace:AurelienRibon.Ui.SyntaxHighlightBox;assembly=AurelienRibon.Ui.SyntaxHighlightBox"
         Icon="Assets\StrideShaderExplorerLogo.ico"
         mc:Ignorable="d"
-        Title="Shader Explorer for Stride" Height="350" Width="525"
+        Title="Shader Explorer for Stride" Height="481.2" Width="870.6"
         WindowState="Maximized">
 
     <Grid Background="#FF434343">
@@ -43,29 +43,33 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="8"/>
                 <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
 
             <!-- Filter and TreeView -->
-            <TextBox Grid.Row="0" Margin="0,0,0,2"
-                     Text="{Binding FilterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}">
-                <local:WatermarkService.Watermark>
-                    <TextBlock Text="Filter list of shaders" Margin="2,0,0,0"/>
-                </local:WatermarkService.Watermark>
-            </TextBox>
+            <StackPanel Grid.Row="0" Grid.Column="0" Margin="0,0,0,2" Orientation="Horizontal">
+                <TextBox Margin="0,0,0,2" Width="200"
+                         Text="{Binding FilterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}">
+                    <local:WatermarkService.Watermark>
+                        <TextBlock Text="Filter list of shaders" Margin="2,0,0,0"/>
+                    </local:WatermarkService.Watermark>
+                </TextBox>
+
+                <CheckBox IsChecked="{Binding DirectParentsOnly}"  Margin="2,0,0,0" Content="Direct Parents Only" />
+            </StackPanel>
 
             <TreeView Grid.Row="1"
-                      ItemsSource="{Binding RootShaders}"
-                      SelectedItemChanged="TreeView_SelectedItemChanged">
+                    ItemsSource="{Binding RootShaders}"
+                    SelectedItemChanged="TreeView_SelectedItemChanged">
                 <TreeView.ItemContainerStyle>
                     <Style TargetType="TreeViewItem">
                         <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
                     </Style>
                 </TreeView.ItemContainerStyle>
                 <TreeView.ItemTemplate>
-                    <HierarchicalDataTemplate ItemsSource="{Binding DerivedShaders}">
+                    <HierarchicalDataTemplate ItemsSource="{Binding TreeViewChildren}">
                         <TextBlock Text="{Binding Name}" Foreground="{Binding IsVisible, Converter={StaticResource BoolToBrush}}"/>
                     </HierarchicalDataTemplate>
                 </TreeView.ItemTemplate>
@@ -76,19 +80,35 @@
                           Background="#FF434343"/>
 
             <StackPanel Grid.Row="0" Grid.Column="2" Margin="0,0,0,2" Orientation="Horizontal">
-                <ComboBox Name="BaseShaders" Margin="0,0,2,0" Width="120"/>
                 <Button x:Name="BackButton" Content="&lt;" Margin="2,0" Click="OnBackButtonClick" IsEnabled="false"/>
                 <Button x:Name="ForwardButton" Content="&gt;" Margin="2,0" Click="OnForwardButtonClick" IsEnabled="false"/>
                 <Button x:Name="OpenButton" Content="Explore" Margin="2,0" Click="OnExploreButtonClick"/>
-                <TextBlock IsManipulationEnabled="false" Margin="2,0" Padding="4,0"  Background="White" FontFamily="Consolas" FontSize="10pt" Text="{Binding SelectedWord, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
+                <TextBlock IsManipulationEnabled="false" Margin="2,0" Padding="4,0"  Background="White" FontFamily="Consolas" FontSize="10pt" Text="{Binding Path=SelectedShader.SelectedMember.Name, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
             </StackPanel>
 
             <!-- Code view -->
-            <ScrollViewer Grid.Row="1" Grid.Column="2" Grid.RowSpan="99"
-                          HorizontalScrollBarVisibility="Auto"
-                          VerticalScrollBarVisibility="Auto">
-                <shb:SyntaxHighlightBox x:Name="codeView" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
-            </ScrollViewer>
+            <Grid Grid.Row="1" Grid.Column="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+
+                <ScrollViewer Grid.Column="0"
+                              HorizontalScrollBarVisibility="Auto"
+                              VerticalScrollBarVisibility="Auto">
+                    <shb:SyntaxHighlightBox x:Name="codeView" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding Path=SelectedShader.Text, Mode=OneWay}" />
+                </ScrollViewer>
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                    <ListBox Grid.Row="0" x:Name="BaseShaders" ItemsSource="{Binding Path=SelectedShader.BaseShaders}" DisplayMemberPath="Name" />
+                    <ListBox Grid.Row="1" x:Name="DerivedShaders" ItemsSource="{Binding Path=SelectedShader.DerivedShaders}" DisplayMemberPath="Name" />
+                    <ListBox Grid.Row="2" x:Name="MemberShaders" ItemsSource="{Binding Path=SelectedShader.ScopedShaders}" DisplayMemberPath="Name" />
+                </Grid>
+            </Grid>
         </Grid>
     </Grid>
 </Window>
