--- a/Stride.ShaderExplorer/MainWindow.xaml
+++ b/Stride.ShaderExplorer/MainWindow.xaml
@@ -1,112 +1,204 @@
-﻿<Window x:Class="StrideShaderExplorer.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:StrideShaderExplorer"
-        xmlns:shb="clr-namespace:AurelienRibon.Ui.SyntaxHighlightBox;assembly=AurelienRibon.Ui.SyntaxHighlightBox"
-        Icon="Assets\StrideShaderExplorerLogo.ico"
-        mc:Ignorable="d"
-        Title="Shader Explorer for Stride" Height="481.2" Width="870.6"
-        WindowState="Maximized">
+﻿<Window
+    x:Class="StrideShaderExplorer.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:StrideShaderExplorer"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:shb="clr-namespace:AurelienRibon.Ui.SyntaxHighlightBox;assembly=AurelienRibon.Ui.SyntaxHighlightBox"
+    Title="Shader Explorer for Stride"
+    Width="870.6"
+    Height="481.2"
+    Icon="Assets\StrideShaderExplorerLogo.ico"
+    WindowState="Maximized"
+    mc:Ignorable="d">
 
     <Grid Background="#FF434343">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
-        <!-- Top row: title, Stride installation path and buttons -->
+        <!--  Top row: title, Stride installation path and buttons  -->
         <Border Grid.Row="0">
             <StackPanel Margin="8">
                 <StackPanel Orientation="Horizontal">
-                    <Button Content="Expand all" Click="OnExpandAllButtonClick"/>
-                    <Button Content="Collapse all" Margin="4,0,0,0" Click="OnCollapseAllButtonClick"/>
-                    <ComboBox Name="StrideDirMode" Margin="4,0,0,0" Width="80"/>
-                    <Button Content="Add Shader Dirs" Margin="4,0,0,0" Click="OnAddDirsButtonClick"/>
-                    <Button Content="Info" Margin="4,0,0,0" Click="OnInfoButtonClick"/>
-                    <TextBox Text="{Binding Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=1000}"
-                             ToolTip="Enter the path to a Stride installation"
-                             BorderThickness="0"
-                             Foreground="#A0A0A0" Background="Transparent"
-                             FontSize="14" FontFamily="Segoe UI Light"
-                             VerticalAlignment="Bottom"
-                             Margin="12,0,0,5"/>
+                    <Button
+                        Margin="0,0,4,0"
+                        Click="OnInfoButtonClick"
+                        Content="Info" />
+                    <Button Click="OnExpandAllButtonClick" Content="Expand all" />
+                    <Button
+                        Margin="4,0,4,0"
+                        Click="OnCollapseAllButtonClick"
+                        Content="Collapse all" />
+                    <TextBox
+                        Width="200"
+                        Margin="0,0,2,0"
+                        Text="{Binding FilterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}">
+                        <local:WatermarkService.Watermark>
+                            <TextBlock
+                                Margin="2,2,0,0"
+                                Foreground="#999999"
+                                Text="Filter list of shaders" />
+                        </local:WatermarkService.Watermark>
+                    </TextBox>
+                    <CheckBox
+                        Margin="2,4,2,0"
+                        Content="Direct Parents Only"
+                        IsChecked="{Binding DirectParentsOnly}" />
+                    <Rectangle
+                        Width="1"
+                        Margin="8,0"
+                        VerticalAlignment="Stretch"
+                        Fill="#292929" />
+                    <Button
+                        x:Name="BackButton"
+                        Margin="2,0"
+                        Click="OnBackButtonClick"
+                        Content="&lt;"
+                        IsEnabled="false" />
+                    <Button
+                        x:Name="ForwardButton"
+                        Margin="2,0"
+                        Click="OnForwardButtonClick"
+                        Content="&gt;"
+                        IsEnabled="false" />
+                    <Button
+                        x:Name="OpenButton"
+                        Margin="2,0"
+                        Click="OnExploreButtonClick"
+                        Content="Explore" />
+                    <Rectangle
+                        Width="1"
+                        Margin="8,0"
+                        VerticalAlignment="Stretch"
+                        Fill="#292929" />
+                    <ComboBox
+                        Name="StrideDirMode"
+                        Width="60"
+                        Margin="4,0,0,0" />
+                    <Button
+                        Margin="4,0,0,0"
+                        Click="OnAddDirsButtonClick"
+                        Content="Add Shader Dirs" />
+                    <TextBox
+                        Margin="12,0,0,5"
+                        VerticalAlignment="Bottom"
+                        Background="Transparent"
+                        BorderThickness="0"
+                        FontFamily="Segoe UI Light"
+                        FontSize="14"
+                        Foreground="#A0A0A0"
+                        Text="{Binding Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=1000}"
+                        ToolTip="Enter the path to a Stride installation" />
                 </StackPanel>
             </StackPanel>
         </Border>
 
-        <!-- Bottom row: main window content -->
+        <!--  Bottom row: main window content  -->
         <Grid Grid.Row="1" Margin="8,0,8,8">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition/>
+                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="8"/>
-                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="8" />
+                <ColumnDefinition Width="3*" />
             </Grid.ColumnDefinitions>
 
-            <!-- Filter and TreeView -->
-            <StackPanel Grid.Row="0" Grid.Column="0" Margin="0,0,0,2" Orientation="Horizontal">
-                <TextBox Margin="0,0,0,2" Width="200"
-                         Text="{Binding FilterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}">
-                    <local:WatermarkService.Watermark>
-                        <TextBlock Text="Filter list of shaders" Margin="2,0,0,0"/>
-                    </local:WatermarkService.Watermark>
-                </TextBox>
+            <!--  TreeView  -->
+            <StackPanel
+                Grid.Row="0"
+                Grid.Column="0"
+                Margin="0,0,0,2"
+                Orientation="Horizontal" />
 
-                <CheckBox IsChecked="{Binding DirectParentsOnly}"  Margin="2,0,0,0" Content="Direct Parents Only" />
-            </StackPanel>
-
-            <TreeView Grid.Row="1"
-                    ItemsSource="{Binding RootShaders}"
-                    SelectedItemChanged="TreeView_SelectedItemChanged">
+            <TreeView
+                Grid.Row="0"
+                ItemsSource="{Binding RootShaders}"
+                SelectedItemChanged="TreeView_SelectedItemChanged">
+                <TreeView.Resources>
+                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#424242" />
+                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
+                    <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="#424242" />
+                    <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightTextBrushKey}" Color="Black" />
+                </TreeView.Resources>
                 <TreeView.ItemContainerStyle>
                     <Style TargetType="TreeViewItem">
-                        <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+                        <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
                     </Style>
                 </TreeView.ItemContainerStyle>
                 <TreeView.ItemTemplate>
                     <HierarchicalDataTemplate ItemsSource="{Binding TreeViewChildren}">
-                        <TextBlock Text="{Binding Name}" Foreground="{Binding IsVisible, Converter={StaticResource BoolToBrush}}"/>
+                        <TextBlock Foreground="{Binding IsVisible, Converter={StaticResource BoolToBrush}}" Text="{Binding Name}" />
                     </HierarchicalDataTemplate>
                 </TreeView.ItemTemplate>
             </TreeView>
 
-            <!-- Grid splitter -->
-            <GridSplitter Grid.Column="1" Grid.RowSpan="99" HorizontalAlignment="Stretch"
-                          Background="#FF434343"/>
+            <!--  Grid splitter  -->
+            <GridSplitter
+                Grid.RowSpan="99"
+                Grid.Column="1"
+                HorizontalAlignment="Stretch"
+                Background="#FF434343" />
 
-            <StackPanel Grid.Row="0" Grid.Column="2" Margin="0,0,0,2" Orientation="Horizontal">
-                <Button x:Name="BackButton" Content="&lt;" Margin="2,0" Click="OnBackButtonClick" IsEnabled="false"/>
-                <Button x:Name="ForwardButton" Content="&gt;" Margin="2,0" Click="OnForwardButtonClick" IsEnabled="false"/>
-                <Button x:Name="OpenButton" Content="Explore" Margin="2,0" Click="OnExploreButtonClick"/>
-                <TextBlock IsManipulationEnabled="false" Margin="2,0" Padding="4,0"  Background="White" FontFamily="Consolas" FontSize="10pt" Text="{Binding Path=SelectedShader.SelectedMember.Name, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
-            </StackPanel>
+            <StackPanel
+                Grid.Row="0"
+                Grid.Column="2"
+                Margin="0,0,0,2"
+                Orientation="Horizontal" />
 
-            <!-- Code view -->
-            <Grid Grid.Row="1" Grid.Column="2">
+            <!--  Code view  -->
+            <Grid Grid.Row="0" Grid.Column="2">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="3*" />
+                    <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
-                <ScrollViewer Grid.Column="0"
-                              HorizontalScrollBarVisibility="Auto"
-                              VerticalScrollBarVisibility="Auto">
-                    <shb:SyntaxHighlightBox x:Name="codeView" IsReadOnly="True" IsReadOnlyCaretVisible="True" Text="{Binding Path=SelectedShader.Text, Mode=OneWay}" />
+                <ScrollViewer
+                    Grid.Column="0"
+                    HorizontalScrollBarVisibility="Auto"
+                    VerticalScrollBarVisibility="Auto">
+                    <shb:SyntaxHighlightBox
+                        x:Name="codeView"
+                        BorderBrush="#292929"
+                        IsReadOnly="True"
+                        IsReadOnlyCaretVisible="True"
+                        Text="{Binding Path=SelectedShader.Text, Mode=OneWay}" />
                 </ScrollViewer>
                 <Grid Grid.Column="1">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="28" />
+                        <RowDefinition Height="1*" />
                     </Grid.RowDefinitions>
-                    <ListBox Grid.Row="0" x:Name="BaseShaders" ItemsSource="{Binding Path=SelectedShader.BaseShaders}" DisplayMemberPath="Name" />
-                    <ListBox Grid.Row="1" x:Name="DerivedShaders" ItemsSource="{Binding Path=SelectedShader.DerivedShaders}" DisplayMemberPath="Name" />
-                    <ListBox Grid.Row="2" x:Name="MemberShaders" ItemsSource="{Binding Path=SelectedShader.ScopedShaders}" DisplayMemberPath="Name" />
+                    <ListBox
+                        x:Name="BaseShaders"
+                        Grid.Row="0"
+                        DisplayMemberPath="Name"
+                        ItemsSource="{Binding Path=SelectedShader.BaseShaders}" />
+                    <ListBox
+                        x:Name="DerivedShaders"
+                        Grid.Row="1"
+                        DisplayMemberPath="Name"
+                        ItemsSource="{Binding Path=SelectedShader.DerivedShaders}" />
+
+                    <shb:SyntaxHighlightBox
+                        x:Name="memberView"
+                        Grid.Row="2"
+                        BorderBrush="#292929"
+                        IsReadOnly="True"
+                        IsReadOnlyCaretVisible="False"
+                        IsLineNumbersMarginVisible="False"
+                        Text="{Binding Path=SelectedShader.SelectedMember, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
+
+                    <ListBox
+                        x:Name="MemberShaders"
+                        Grid.Row="3"
+                        DisplayMemberPath="Name"
+                        ItemsSource="{Binding Path=SelectedShader.ScopedShaders}" />
                 </Grid>
             </Grid>
         </Grid>
